--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -192,6 +192,11 @@ input[type="radio"] {
   font-size: 18px;
   text-decoration: underline;
   padding: 20px 0 0 0;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.reset:hover {
+  color: var(--secondary-color);
 }
 /* search */
 .filters .search {
