--- a/src/pages/Gallery/Gallery.css
+++ b/src/pages/Gallery/Gallery.css
@@ -14,6 +14,10 @@
       border-bottom: 1px solid #c0c0c0;
       .icon {
         font-size: 30px;
+        transition: 0.5s;
+      }
+      .icon:hover {
+        color: #c0c0c0;
       }
       p {
         font-size: 18px;
