--- a/src/components/DesignerCard/DesignerCard.css
+++ b/src/components/DesignerCard/DesignerCard.css
@@ -2,26 +2,27 @@
   padding: 16px 24px;
   border: 1px solid #c0c0c0;
   margin-top: 40px;
-}
-.heading {
-  display: flex;
-  justify-content: space-between;
-  a {
-    height: fit-content;
+  .heading {
     display: flex;
-    align-items: center;
-    gap: 4px;
-    font-size: 14px;
-    font-weight: bold;
-    color: #385854;
-    .icon {
-      transition: 0.5s;
+    justify-content: space-between;
+    > a {
+      height: fit-content;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      font-size: 14px;
+      font-weight: bold;
+      color: #385854;
+      .icon {
+        transition: 0.5s;
+      }
+    }
+    a:hover .icon {
+      transform: translateX(3px);
     }
   }
-  a:hover .icon {
-    transform: translateX(3px);
-  }
 }
+
 a {
   color: black;
 }
