--- a/src/pages/Order/Order.css
+++ b/src/pages/Order/Order.css
@@ -16,20 +16,26 @@ margin-bottom:20px;
     width: 50px;
     height: 50px;
 } */
- .order {
-    padding-top: 141.2px;
+.order {
+  padding-top: 141.2px;
+  padding-bottom: 40px;
 }
-.order .title{
-margin-bottom:20px;
+.order .title {
+  margin-bottom: 20px;
 }
-.order .count-of-all-order{
-    padding: 20px;
+.order .count-of-all-order {
+  padding: 20px;
 }
 .order table {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
   font-size: 14px;
+  tbody {
+    tr {
+      transition: 0.5s;
+    }
+  }
 }
 
 .order table th,
@@ -43,7 +49,7 @@ margin-bottom:20px;
   background-color: #fafafa;
   font-weight: bold;
 }
-.order table tbody tr:nth-child(odd){
+.order table tbody tr:nth-child(odd) {
   background-color: #f5f5f5;
 }
 .order table tbody tr:nth-child(even) {
@@ -60,8 +66,11 @@ margin-bottom:20px;
   object-fit: cover;
   border-radius: 6px;
 }
-.order table .color-cell{
+.order table .color-cell {
   text-align: "center";
-  vertical-align:" middle";
-  margin:"auto";
+  vertical-align: " middle";
+  margin: "auto";
+  p {
+    margin: auto;
+  }
 }
