--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -22,6 +22,7 @@
   align-items: center;
   flex-direction: column;
   gap: 8px;
+  margin-bottom: 20px;
   .user-image {
     width: 100px;
     height: 100px;
@@ -29,6 +30,16 @@
   }
   p {
     font-size: 16px;
+  }
+  .name-info {
+    text-align: center;
+    p.name {
+      font-size: 20px;
+    }
+    p.type {
+      font-size: 14px;
+      color: var(--secondary-color);
+    }
   }
 }
 .profile-holder .profile-container .user-profile-info {
