--- a/src/components/ReviewCard/ReviewCard.css
+++ b/src/components/ReviewCard/ReviewCard.css
@@ -4,8 +4,10 @@
 .review-card .publisher {
   margin-bottom: 30px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   gap: 20px;
 }
 .review-card .publisher .image {
